--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Learning how to utilize Mongo and Mongoose for NoSQL databases",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
@@ -19,7 +20,12 @@
   },
   "homepage": "https://github.com/MagicInUse/Mongo-Network#readme",
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.2",
     "express": "^4.21.2",
     "mongoose": "^8.8.4"
+  },
+  "dependencies": {
+    "typescript": "^5.7.2"
   }
 }
